--- a/style.css
+++ b/style.css
@@ -53,6 +53,15 @@
 }
 
 .carousel-caption button {
-    background-color: black;
-    border: black;
+    background-color: #E21616;
+    border: #E21616;
+}
+
+.carousel-item {
+    background: linear-gradient(0deg, rgba(15,15,15,1) 4%, rgba(145,145,145,1) 61%, rgba(255,255,255,1) 100%);
+}
+
+.carousel-item img.overlay {
+    mix-blend-mode: overlay;
+    filter: blur(4px);
 }
