Fix nav bar & footer

--- a/style.css
+++ b/style.css
@@ -87,3 +87,11 @@
     height: 15vw;
     object-fit: cover;
 }
+
+#footer {
+    padding-top: 150px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    color: #999;
+}
