--- a/style.css
+++ b/style.css
@@ -85,7 +85,20 @@
 .card-img-top {
     width: 100%;
     height: 15vw;
+    min-height: 15vw !important;
     object-fit: cover;
+    object-position: 50% 30%;
+}
+@media (max-width: 768px) { 
+    .card-img-top {
+        height: 100vw;
+    }
+}
+
+@media (max-width: 992px) {
+    .card-img-top {
+        height: 50vw;
+    }
 }
 
 #footer {
